--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="./img/(Positive) Congratulation You get 40 point for your ride.png" alt="Wide coverage location">
         </div>
         <section class="texto">
-            <h1> Wide coverage location </h1>
+            <h1> New Wide coverage location </h1>
             <p>  There’s lots to do in your city, and we’ve got the rides to help you enjoy it all.
                 And they’re all available right from your app.</p>
             <a>Learn more</a>
